:hammer: fix warning modal z-index

--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -12,7 +12,7 @@
     background: rgba(0,0,0, 0.5);
     box-shadow: 1.95px 1.95px 2.6px rgba(0, 0, 0, 0.25);
     border-radius: 1rem;
-
+    z-index: 5;
     display: flex;
     align-items: center;
     justify-content: center;
